...

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/et_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
...
        android:ems="10"
        android:hint="@string/input_title_here"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColorHint="@color/colorHint"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toTopOf="@+id/sp_add_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />


    <Spinner
...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/et_content"
        app:layout_constraintEnd_toStartOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title" />

    <TextView
        android:id="@+id/tv_date"
...
